--- a/AnPInventoryApp/MainWindow.xaml
+++ b/AnPInventoryApp/MainWindow.xaml
@@ -3,26 +3,34 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AnPInventoryApp" xmlns:views="clr-namespace:AnPInventoryApp.Views"
+        xmlns:local="clr-namespace:AnPInventoryApp" 
+        xmlns:views="clr-namespace:AnPInventoryApp.Views"
         mc:Ignorable="d"
-        Background="#333" WindowState="Maximized"
+        Background="#333" 
+        WindowState="Maximized"
         Title="ANP Cutting Inventory" Height="450" Width="800">
     <Window.Resources>
-        
+        <Style TargetType="Menu">
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
     </Window.Resources>
     <StackPanel>
         <Menu Height="18" Background="#111">
             <Menu.Resources>
                 <Style TargetType="MenuItem">
                     <Setter Property="Foreground" Value="WhiteSmoke"/>
+                    <Setter Property="Background" Value="#111"/>
                     <Setter Property="FontSize" Value="10"/>
                     <Setter Property="FontWeight" Value="SemiBold"/>
                     <Setter Property="Padding" Value="8,1.5"/>
+                    <Setter Property="BorderThickness" Value="0"/>
+                    <Setter Property="Margin" Value="0"/>
                 </Style>
             </Menu.Resources>
             <MenuItem Header="File"/>
             <MenuItem Header="Add">
                 <MenuItem Header="Material Sheet" Command="{Binding AddMaterialSheetCommand}"/>
+                <MenuItem Header="Test"/>
             </MenuItem>
         </Menu>
         <views:SheetCollectionView x:Name="SheetCollectionView"/>
