--- a/AnPInventoryApp/Windows/AddMaterialSheetWindow.xaml
+++ b/AnPInventoryApp/Windows/AddMaterialSheetWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnPInventoryApp.Views"
-        mc:Ignorable="d" Background="#333"
-        Title="Add Material Sheet" Height="Auto" Width="Auto">
+        mc:Ignorable="d" Background="#333" ResizeMode="NoResize"
+        SizeToContent="Manual" WindowStartupLocation="CenterOwner"
+        Title="Add Material Sheet" Height="360" Width="280">
     <StackPanel>
         <Grid Margin="36">
             <Grid.Resources>
@@ -16,6 +17,7 @@
                         <Setter Property="VerticalContentAlignment" Value="Center"/>
                     </Style>
                     <Style TargetType="TextBox">
+                        <Setter Property="Background" Value="#222"/>
                         <Setter Property="Foreground" Value="White"/>
                         <Setter Property="Margin" Value="12,0"/>
                         <Setter Property="HorizontalContentAlignment" Value="Left"/>
